# nlp-project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: beamercolorthemeredorange.sty  beamerthemegemini.sty  complete-guide.md  findings.md  neuronpedia_review.md  poster.tex  poster_v2.tex  profs-feedback.txt  proposal.tex  research_notes.md
notebooks/: 01_setup_verify.ipynb  01_setup_verify_fixed.ipynb  02_feature_extraction.ipynb  03_zhao_baseline.ipynb  04_causal_ablation.ipynb  05_interaction_analysis.ipynb  05b_capacity_controls.ipynb  06_paper_figures.ipynb  07_qwen_cross_model.ipynb  08_flores_validation.ipynb  09_flores_ablation.ipynb
notebooks/runs/: 01_setup_verify.ipynb  02_feature_extraction.ipynb  03_zhao_baseline.ipynb  04_causal_ablation.ipynb  05_interaction_analysis.ipynb  05b_capacity_controls.ipynb
results/: phase2_ablation.pt  phase2_clamped_vs_directional.pt  phase3_interaction.pt  phase3a_alignment.pt  phase3a_controls.pt  phase3a_controls_summary.csv  phase3bc_controls.pt  qwen_phase2b_full.pt  qwen_phase3_full.pt
results/flores/: 08_flores_validation_2 (2).ipynb  09_flores_ablation (1).ipynb
scripts/: fetch_neuronpedia_labels.py  generate_poster_figures.py  generate_poster_v2_figures.py  load_phase1.py  phase3a_alignment.py  phase3a_clean_variants.py  phase3bc_controls.py  run_clamped_experiment.py  run_qwen_full_pipeline.py
src/: config.py  data.py  evaluation.py  extraction.py  intervention.py  model.py  monolinguality.py  svd_baseline.py
